# amazon-copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  search_products.py
.github/workflows/: ci.yml
docs/: data_loading.md  development.md  qdrant_setup.md  search.md  setup.md
report/: .gitignore  main.tex
report/chapters/: agent.tex  arquitectura.tex  conclusiones.tex  expansion.tex  funcionalidades.tex  introduccion.tex  recommendation.tex  search.tex  ux-ui.tex  ux_ui.tex
research/: data_exploration.py  embeddings.py  get_categories.py  test_qdrant_client.py  test_research.py  test_search_workflow.py
src/amazon_copilot/: __init__.py  cli.py  config.py  data_loader.py  database.py  main.py  models.py  qdrant_client.py  schemas.py  utils.py
src/amazon_copilot/api/: main.py
src/amazon_copilot/api/crud/: products.py
src/amazon_copilot/api/routers/: ai.py  categories.py  products.py  recommendations.py
src/amazon_copilot/qdrant/: __init__.py  client.py  utils.py
src/amazon_copilot/services/: categories.py  products.py
src/amazon_copilot/services/ai/chatbot/: config.py  graph.py  prompts.py  schemas.py  utils.py
src/amazon_copilot/services/ai/chatbot/prompts/: categories.json  collection.txt  presentation.txt  questions.txt
src/amazon_copilot/services/ai/recommendation/: main.py
src/amazon_copilot/services/data/: categories.json
