[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-copilot"
version = "0.1.0"
description = "An e-commerce platform using LLMs"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "JPSoteloSilva",   email = "jpsotelosilva@gmail.com" },
  { name = "JuanPabloConde10", email = "condejuanpablo10@gmail.com" },
  { name = "xiribarnegaray",   email = "xavieriribarnegaray@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.5.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.7.0",
  "ruff>=0.1.5",
  "black>=23.11.0",
  "pre-commit>=3.5.0",
  "ipykernel>=6.29.5",
  "matplotlib>=3.10.1",
  "pandas-stubs>=2.0.0.1",
]
backend = [
  "qdrant-client>=1.6.0",
  "pandas>=2.0.0",
  "fastembed>=0.6.1",
  "fastapi[standard]>=0.115.12",
  "types-tqdm>=4.67.0.20250417",
  "tqdm>=4.67.1",
  "pandas-stubs>=2.2.3.250308",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
extend-exclude = ["tests", "research"]

[tool.ruff.isort]
known-first-party = ["amazon_copilot"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
exclude = ["research/"]
mypy_path = ["src"]
namespace_packages = true
implicit_reexport = false

[tool.hatch.build]
# Maps the import name -> source directory
package-dir = { "amazon_copilot" = "src/amazon_copilot" }

[tool.hatch.build.targets.wheel]
# Tell Hatchling "include the amazon_copilot package"
packages = ["amazon_copilot"]
# (no need for anything else here—py.typed lives alongside your code in src/amazon_copilot/py.typed)

[tool.hatch.build.targets.sdist]
# sdist will grab everything under src/, plus README & pyproject.toml
include = [
  "src/**",
  "README.md",
  "pyproject.toml",
]
